set new oidc user as pending according to datadir props
use findEmail with pending

find pending by email

start to manage pending state exception

manage pending auth failure except

Manage oauth2 duplicate user error

fix code error dupplicate account

display pendingUser login message

--- a/gateway/src/main/resources/messages/login_fr.properties
+++ b/gateway/src/main/resources/messages/login_fr.properties
@@ -14,3 +14,4 @@ separator_login=Ou, Connectez-vous avec
 register_no_account=Vous n'avez pas de compte?
 login_message_subtitle=Découvrez tous les jeux de données
 back_home=Retour
+pending_user = L'utilisateur est en attente de validation
