more pending translate

--- a/gateway/src/main/resources/messages/login_es.properties
+++ b/gateway/src/main/resources/messages/login_es.properties
@@ -14,3 +14,4 @@ separator_login=O, Iniciar sesión con
 register_no_account=No tienes una cuenta?
 login_message_subtitle=Descubre todos los datos de tu plataforma
 back_home=Volver a la página de inicio
+pending_user=El usuario está esperando la validación.
