--- a/gateway/src/main/resources/messages/login_nl.properties
+++ b/gateway/src/main/resources/messages/login_nl.properties
@@ -14,3 +14,4 @@ separator_login=Of, Aanmelden met
 register_no_account=Heeft u nog geen account?
 login_message_subtitle=Ontdek alle gegevens van uw platform
 back_home=Terug naar huis
+pending_user=De gebruiker wacht op goedkeuring
